# AG-Dedicated

./: .RData  .Rhistory  .gitignore  AG-Dedication.Rmd  AG-Dedication.nb.html  Marked.ag_2018_12-15-17.xlsx  README.md  RPAD_Scraper.R  agded.R  pdf-scrape.py  pyproject.toml  requirements.txt  setup.py  sheet_grabber.R  wrangle.py  ~$Marked.ag_2018_12-15-17.xlsx
.Rproj.user/977BADF5/: rmd-outputs
.Rproj.user/977BADF5/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/977BADF5/sources/prop/: INDEX
.Rproj.user/shared/notebooks/: paths
.github/workflows/: pages.yml
Dedication History/output/: 2015_ag_1yr.csv  2016 ag dedication.csv  2017_ag.csv  2018_ag_dedications.csv  2019_ag_dedications.csv  ag2020_121519.csv  ag2021_121520.csv  ag2022_121521.csv  ag2023_121522.csv  ag2024_121523.csv  ag_1yr 2013 copy.csv  ag_1yr 2014.csv  cleaned_output.csv  merge clean.py  merged_output.csv
archive/: 2021_dedications_owndat_schn.csv  2021_dedications_owndat_schn.qmd  AG-Dedication.Rmd  README_old.md
config/: config.yaml
docs/: FUTURE_ANALYSES.md  MIGRATION_GUIDE.md  QUICKSTART.md  TRANSFORMATION_SUMMARY.md  county_programs.md
notebooks/: analysis.ipynb
reports/policy_comparison/: EXECUTIVE_SUMMARY.md  comparison_report.txt  county_summary.csv  dedication_periods.csv  detailed_policy_analysis.txt  requirements.csv  run_analysis.py
src/ag_dedicated/: __init__.py  cli.py
src/ag_dedicated/analysis/: __init__.py  statute_comparison.py
src/ag_dedicated/config/: __init__.py  settings.py
src/ag_dedicated/extractors/: __init__.py  pdf_extractor.py
src/ag_dedicated/scrapers/: __init__.py  base.py  hawaii.py  honolulu.py  kauai.py  maui.py
src/ag_dedicated/utils/: __init__.py  logging.py  validation.py
website/: index.html  parcels_cdl.js  parcels_cdl.json
(+2 files in other folders)
